The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for sdparm-1.03 [20071112]
  - allow more than one DEVICE arguments on command line
  - sync with debian unstable files: debian/rules+changelog
  - add speed[=val] command

ChangeLog for sdparm-1.02 [20071008]
  - support mode page descriptors with
    <acronym_name>[.<descriptor_num] syntax
    - "2_<acronym>" type entries replaced by new syntax
    - support medium partition mpage (SSC) with partitions
      as descriptors
  - append relative target port identifier to SAS target
    port address with '-iq' option
  - add solaris port
  - place vendor specific data in sdparm_data_vendor.c
  - in the absence of an explicit transport or vendor,
    and if no match on mode page name or field, then try
    SAS transport
  - add block device characteristics VPD page
  - add protocol-specific logical unit information VPD
    page (SAS)
  - use new sg_lib sg_get_num_nomult()
  - place source in subversion repository
    - use svn:externals property to point to sg3_utils'
      include/ and lib/ directories
    - move some files around (e.g. sdparm.8 to doc/)

ChangeLog for sdparm-1.01 [20070405]
  - add element address assignment mode page (smc)
  - improve error handling in lk 2.4 series mapping to
    sg devices
  - add configure.ac rule for mingw (Windows)
    - include <inttypes.h> to use PRIx64 instead of %llx
  - add LUICLR bit to extended inquiry VPD page
  - correct some headers for C++ inclusion
    - fix some C code to compile under C++
  - fix bug when unusual transport or vendor given
  - add a Fujitsu vendor mode page
  - add "initial priority" to control extension mpage
  - add "disconnect-reconnect" mpage to generic list;
    there are still transport specific versions
  - extend block limits VPD page (sbc3r09)
  - sync with sg3_utils-1.24 pass-through code
